--- a/Símbolos e Emoji no seu site/index.html
+++ b/Símbolos e Emoji no seu site/index.html
@@ -14,5 +14,16 @@
        no meio do par de tags
        &lt;p&gt; e &lt;/p&gt; 
     </p>
+
+    <p>
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+    </p>
 </body>
 </html>
