--- a/Símbolos e Emoji no seu site/index.html
+++ b/Símbolos e Emoji no seu site/index.html
@@ -25,5 +25,11 @@
         &cent;
         &Delta;
     </p>
+
+    <p>
+        Vamos adcionar alguns emoji:
+        &#x2714;
+        &#x1F92F;
+    </p>
 </body>
 </html>
